src/main/java/com/example/sanctionedpeopleservice/common/error/model/ErrorStatus.java
package com.example.sanctionedpeopleservice.common.error.model;

public enum ErrorStatus {
  SANCTIONED_PERSON_NOT_FOUND
}
